Fix quill wrapper height on small safari screens

--- a/app/assets/stylesheets/quilleditor.css.scss
+++ b/app/assets/stylesheets/quilleditor.css.scss
@@ -29,8 +29,9 @@
 
 @media screen and (max-width: 64em) {
   .quill-wrapper {
-
     width: 96%;
+    height: auto;
+
     .ql-toolbar.ql-snow {
       height: auto;
     }
